# rinna_slackbot

./: .gitignore  .gitmodules  .tool-versions  CLAUDE.md  README.md  app.py  biome.json  launch.vbs  package-lock.json  package.json  proxy_server.py  pyproject.toml  tsconfig.json  vitest.config.ts  worker.py  りんな.lnk
.github/: dependabot.yml
.github/workflows/: automerge.yml  test.yml
data/: personas.example.yaml  usernames.example.yaml
rinna/: configs.py  generation.py  llm_benchmark.py  llm_benchmark_utils.py  transformer_models.py  utils.py
scripts/: checkIntroTokens.ts
src/: composeRoot.ts  main.ts
src/adapters/: AzureContentModerator.ts  FirestoreResponseLog.ts  GoogleLanguageModerator.ts  LlamaServerClient.ts  ParallelModerator.ts  PubSubClient.ts  RocmSmiThermometer.ts  SlackChatPoster.ts  SlackImageDownloader.ts  llamaServerProcess.ts  modelDownloader.ts
src/app/: deps.ts  generatePersonaResponse.ts  mutex.ts  router.ts
src/app/handlers/: meaningHandler.ts  pingHandler.ts  signalHandler.ts  temperatureHandler.ts
src/config/: env.ts  loadPersonaData.ts
src/contracts/: README.md  pubsubPayloads.ts
src/domain/: personas.ts  sentenceDelimiters.ts
src/domain/dispatch/: detectPersonas.ts  moderationRules.ts  trimHistory.ts
src/domain/prompt/: buildPrompt.ts  formatMessage.ts  imageAttachments.ts  normalizeInput.ts  placeholders.ts  topHumanUsernames.ts
src/domain/speech/: applyReplacements.ts  normalizeChunk.ts  splitChunks.ts  streamParser.ts
src/ports/: ChatPoster.ts  ImageDownloader.ts  LlmClient.ts  MessageSource.ts  Moderator.ts  Publisher.ts  Random.ts  ResponseLog.ts  Thermometer.ts
tests/: conftest.py
tests/adapters/: AzureContentModerator.test.ts  LlamaServerClient.test.ts  ParallelModerator.test.ts  SlackImageDownloader.test.ts
tests/app/: fakeDeps.ts  generatePersonaResponse.test.ts  router.test.ts
tests/app/handlers/: meaningHandler.test.ts  signalHandler.test.ts
tests/domain/: applyReplacements.test.ts  buildPrompt.test.ts  detectPersonas.test.ts  imageAttachments.test.ts  moderationRules.test.ts  normalizeChunk.test.ts  normalizeInput.test.ts  placeholders.test.ts  splitChunks.test.ts  streamParser.test.ts  trimHistory.test.ts
tests/rinna/: test_generation.py  test_utils.py
